--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>ar_memo_frontend</title>
     <link rel="manifest" href="manifest.json">
@@ -7,6 +7,16 @@
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d9a28c7813a47e45be144b0df7c27ccf"></script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+<!-- This script installs service_worker.js to provide PWA functionality to
+     application. For more information, see:
+     https://developers.google.com/web/fundamentals/primers/service-workers -->
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('flutter-first-frame', function () {
+      navigator.serviceWorker.register('flutter_service_worker.js');
+    });
+  }
+</script>
+<script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
