- 카카오맵 SDK 초기화 로직 개선 및 라이브러리 추가 (`services`, `clusterer`, `drawing`) - 그룹 관리 네비게이션 로직 변경: `MainScreen` 탭 전환방식 적용 - 불필요한 주석 제거 및 텍스트 수정: 오류 메시지 사용자 친화적으로 변경 - `AndroidManifest` 메타데이터 수정 및 렌더링 모드(`surface`) 추가 - `GroupRepository`에서 미사용 메서드 제거 - `build.gradle.kts` SDK 버전 명시 및 설정 검토

--- a/web/index.html
+++ b/web/index.html
@@ -4,18 +4,15 @@
     <title>ar_memo_frontend</title>
     <link rel="manifest" href="manifest.json">
 
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d9a28c7813a47e45be144b0df7c27ccf"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d9a28c7813a47e45be144b0df7c27ccf&libraries=services,clusterer,drawing"></script>
 </head>
 <body>
-<!-- This script installs service_worker.js to provide PWA functionality to
-     application. For more information, see:
-     https://developers.google.com/web/fundamentals/primers/service-workers -->
 <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('flutter-first-frame', function () {
-      navigator.serviceWorker.register('flutter_service_worker.js');
-    });
-  }
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('flutter-first-frame', function () {
+            navigator.serviceWorker.register('flutter_service_worker.js');
+        });
+    }
 </script>
 <script src="flutter_bootstrap.js" async></script>
 </body>
