Rename app to PlaceNote and enhance group features

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ar_memo_frontend</title>
+    <title>PlaceNote</title>
     <link rel="manifest" href="manifest.json">
 
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d9a28c7813a47e45be144b0df7c27ccf"></script>
